# Solar

./: .env  .gitignore  main.py  makefile  pyproject.toml  scripts.py
alembic/: env.py
alembic/versions/: 2025_08_24_0047-5ad4ef62d758_.py  2025_08_24_1349-e958e2a36ce6_unique_contraint_for_the_data.py  2025_09_09_2106-7eb932f2fe94_added_casecade_delete.py  2025_09_09_2126-7f3cac795e45_added_quotation_table.py  2025_09_09_2222-d3190230140f_modified_account_no_and_ifsc_as_str.py  2025_09_09_2323-442ea77b9a41_version_2_changes.py  2025_09_09_2352-7e3f53b84ffe_added_client_requirement_for_clinets_.py  2025_09_09_2355-8b415d9821fc_added_client_name.py  2025_09_10_0052-1441a9c453f1_modified_client_requirement_description_.py  2025_09_10_0108-2d5f3ce1bc30_added_column_creq_name_for_the_naming_.py  2025_09_12_2029-42e89693579e_added_clinet_consumer_table.py  2025_09_12_2111-8d3b54c1ed4d_modified_clinet_consumer_deault_value.py  2025_09_13_0035-dc3c2b3d6c8b_added_applicance.py  2025_09_13_0145-4747694fdc57_consumer_appliance_usage_table_added.py  2025_09_14_2019-cc1f8e4e4584_modified_table_name.py  (+10 more)
core/: db.py  settings.py
db_views/: clinet_with_consumers.sql
endpoints/: api.py  appliances.py  category.py  client.py  client_consumer.py  client_requirement.py  consumer_requirement_product.py  consumer_requirements.py  consumerapplianceusage.py  pdf.py  products.py  quotation.py  requirement.py  requirement_product.py
models/: clinet_with_consumers.py  product.py
schema/: CosnumerRequirementProduct.py  RequirementProduct.py  clinet.py
services/: pdf.py
utils/: aws.py
(+1 files in other folders)
