[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "boto3>=1.40.12",
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.9",
    "sqlmodel>=0.0.24",
]
